Fixed bg with body overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,6 @@ body
     font-weight: 300;
     font-style: normal;
 
-    overflow: hidden;
-
     color: #fff;
     background: #111;
 
@@ -210,49 +208,13 @@ a:focus
 /** 3. CONTENT
 *****************************************************************/
 
-#main
-{
-    position: fixed;
-
-    width: 100%;
-    height: 100%;
-}
-
-#main-container
-{
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-
-    overflow: hidden;
-
-    -webkit-transition: all 200ms linear;
-            transition: all 200ms linear;
-}
-
 .container-mid
 {
-    position: absolute;
-    z-index: 2;
-    top: 50%;
-    left: 0;
-
-    display: block;
-
-    width: 100%;
-    height: auto;
-    max-height: 100%;
-
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
     text-align: center;
 }
 
 .hero .container-mid
 {
-    overflow: auto;
     padding: 60px 30px;
 }
 
@@ -299,329 +261,10 @@ a:focus
 /** 4. OVERLAY
 *****************************************************************/
 
-#overlay
-{
-    position: absolute;
-    z-index: -2;
-    top: 0;
-
-    overflow: hidden;
-
-    width: 100%;
-    height: 100%;
-
-    -webkit-transition: all 800ms ease;
-            transition: all 800ms ease;
-    pointer-events: none;
-
-    background: rgba(0, 0, 0, .8);
-}
-
-#overlay.open
-{
-    pointer-events: auto;
-    z-index: 40;
-}
-
-#overlay.fade-In
-{
-    opacity: 0;
-}
-
-#overlay.open.fade-In
-{
-    opacity: 1;
-}
-
-#overlay.slide-from-top
-{
-    bottom: 100%;
-}
-
-#overlay.open.slide-from-top
-{
-    bottom: 0;
-}
-
-#overlay.slide-from-bottom
-{
-    top: 100%;
-}
-
-#overlay.open.slide-from-bottom
-{
-    top: 0;
-}
-
-#overlay.slide-from-left
-{
-    right: 100%;
-}
-
-#overlay.open.slide-from-left
-{
-    right: 0;
-}
-
-#overlay.slide-from-right
-{
-    left: 100%;
-}
-
-#overlay.open.slide-from-right
-{
-    left: 0;
-}
-
-
 .overlay
 {
-    position: absolute;
-    z-index: 1;
-
-    overflow: auto;
-
-    width: 100%;
-    height: 100%;
-
-    -webkit-transition: all 800ms ease;
-            transition: all 800ms ease;
-    pointer-events: none;
+    background: rgba(0, 0, 0, .8);
 }
-
-.overlay.active
-{
-    pointer-events: auto;
-}
-
-.overlay.fade-In
-{
-    opacity: 0;
-}
-
-.overlay.slide-from-top
-{
-    bottom: 100%;
-}
-
-.overlay.slide-from-bottom
-{
-    top: 100%;
-}
-
-.overlay.slide-from-left
-{
-    right: 100%;
-}
-
-.overlay.slide-from-right
-{
-    left: 100%;
-}
-
-#overlay.open .overlay.active.fade-In
-{
-    opacity: 1;
-}
-
-#overlay.open .overlay.active.slide-from-top
-{
-    bottom: 0;
-}
-
-#overlay.open .overlay.active.slide-from-bottom
-{
-    top: 0;
-}
-
-#overlay.open .overlay.active.slide-from-left
-{
-    right: 0;
-}
-
-
-#overlay.open .overlay.active.slide-from-right
-{
-    left: 0;
-}
-
-.up-button
-{
-    position: absolute;
-    z-index: 120;
-    top: 0;
-    left: 50%;
-
-    overflow: hidden;
-
-    width: 70px;
-    height: 0;
-
-    cursor: pointer;
-    -webkit-transition: all 400ms ease;
-            transition: all 400ms ease;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-
-    background: rgba(255,255,255,1.00);
-}
-
-.up-button.active
-{
-    height: 70px;
-}
-
-.up-button i
-{
-    font-size: 16px;
-    font-weight: normal;
-    line-height: 70px;
-
-    position: absolute;
-
-    width: inherit;
-    height: inherit;
-
-    -webkit-transition: none;
-            transition: none;
-    text-align: center;
-
-    color: #000;
-}
-
-.up-button:hover i
-{
-    -webkit-transition: all 200ms cubic-bezier(1, 0, 0, 1);
-            transition: all 200ms cubic-bezier(1, 0, 0, 1);
-}
-
-.up-button i:first-child
-{
-    -webkit-transform: translateY(200%);
-            transform: translateY(200%);
-}
-
-.up-button:hover i:first-child
-{
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-}
-
-.up-button i:last-child
-{
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-}
-
-.up-button:hover i:last-child
-{
-    -webkit-transform: translateY(-200%);
-            transform: translateY(-200%);
-}
-
-.grcs_bullet_nav 
-{
-    position: fixed;
-    right: -200px;
-    top: 50%;
-    z-index: 150;
-    -webkit-transition: all 1s ease;
-            transition: all 1s ease;
-    -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
-}
-
-.grcs_bullet_nav.init
-{
-    right: 34px;
-}
-
-.grcs_bullet_nav .nav_dots 
-{
-    width: 18px;
-    height: 18px;
-    border: 2px solid #fff;
-    display: block;
-    cursor: pointer;
-    margin: 16px 0;
-    border-radius: 100%;
-    position: relative;
-}
-
-.grcs_bullet_nav .nav_dots.active:before 
-{
-    content: "";
-    background: #fff;
-    width: 50%;
-    height: 50%;
-    position: absolute;
-    left: 50%;
-    margin: 0;
-    padding: 0;
-    top: 50%;
-    border-radius: 100%;
-     -webkit-transform: translate(-50%,-50%);
-             transform: translate(-50%,-50%);
-}
-
-body.is-mobile.merge-true #overlay.open
-{
-    overflow-y: scroll;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
-}
-
-body.is-mobile.merge-true .overlay
-{
-    position: relative;
-    z-index: 1;
-
-    width: 100vw;
-    height: auto;
-    min-height: 100vh;
-    pointer-events: auto;
-    top: 0 !important;
-    left: 0 !important;
-    bottom: 0 !important;
-    right: 0 !important;
-}
-
-body.is-mobile.merge-true .overlay .content
-{
-    display: flex;
-    align-items: center;
-    min-height: 100vh;
-}
-
-body.is-mobile.merge-true .overlay .container-mid
-{
-    position: relative;
-    top: 0;
-    height: auto;
-
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-}
-
-@media screen and (max-width: 740px)
-{
-    .grcs_bullet_nav.init
-    {
-        right: 14px;
-    }
-}
-
-@media screen and (max-width: 540px)
-{
-    
-    .grcs_bullet_nav
-    {
-        display: none;
-    }
-    
-}
-
-
 
 
 /** 5. OVERLAY-CONTENT-ABOUT
